backport: re PR target/35225 (gcc segfaults when building GTK+ code with -O2 -fPIC for SH4)

Backport from mainline:
	PR target/35225
	* config/sh/sh.c (find_barrier): Don't go past 'from' argument.

From-SVN: r133066